raffia/tests/error/selectors/invalid-nth-matcher-1.snap
---
source: raffia/tests/error.rs
---
error: expect token `)`, but found `<ident>`
  ┌─ invalid-nth-matcher-1.css:1:17
  │
1 │ :nth-child(even ofa) {}
  │                 ^^^


